# package_ros

./: README.md
camera_detection/: CMakeLists.txt  package.xml
camera_detection/cfg/: depth_analysis.cfg  depth_analysis_config.cfg
camera_detection/launch/: camera_detection.launch  depth_analysis.launch
camera_detection/msg/: ObstacleDetection.msg
camera_detection/nodes/: server.py
camera_detection/src/: .depth_analysis.py.swo  depth_analysis  depth_analysis.py
sound_publisher/: CMakeLists.txt  package.xml  setup.py
sound_publisher/launch/: test.launch
sound_publisher/msg/: SongTitle.msg
sound_publisher/src/: .sound_pub.swp  kobuki_serial.py  musical_note_pub  song_pub  song_pub.py  sound_pub  sound_pub.py  test.py
turtlebot_scenario/: CMakeLists.txt  package.xml  setup.py
turtlebot_scenario/launch/: scenario.launch  turtlebot_scenario.launch
turtlebot_scenario/msg/: LedControl.msg  Orientation.msg
turtlebot_scenario/src/: .scenario.py.swo  .scenario.py.swp  led_control.py  scenario  scenario.py  scenario_j.py  servo_motion  servo_motion.py
