<?xml version="1.0"?>
<package>
  <name>camera_detection</name>
  <version>0.5.0</version>
  <description>
	This package contains all our applications using the camera

	You'll find our face_detections script 
	and also our obstacle detection using the depth camera
</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="turtlebot.mec3@gmail.com">MEC3</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
   <url type="website">https://github.com/turtlebotmec3/</url> 


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="qmercier@hotmail.fr">Quentin Mercier</author>
  <!--
  <author email="no_email@no_email.com">Julien Calmels</author>
  -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>CvBridge</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>cv2</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>CvBridge</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>cv2</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
